@@ -29,6 +29,10 @@ module Heirloom
                              :config  => @config
         ensure_metadata_in_upload_region :config  => @config, 
                                          :regions => @opts[:region]
+        ensure_valid_name :config => @config,
+                          :name   => @opts[:name]
+        ensure_valid_bucket_prefix :config        => @config,
+                                   :bucket_prefix => @opts[:bucket_prefix]
         ensure_entry_does_not_exist_in_catalog :config  => @config,
                                                :catalog => @catalog,
                                                :entry   => @opts[:name],
